app/[locale]/styles/main.scss
@use "./mixins" as *;

@use "./partials/about" as *;
@use "./partials/banner" as *;
@use "./partials/button" as *;
@use "./partials/contacts" as *;
@use "./partials/dropdown" as *;
@use "./partials/footer" as *;
@use "./partials/home" as *;
@use "./partials/mixins" as *;
@use "./partials/navigation";
@use "./partials/projects";
@use "./partials/skills";
@use "./partials/swiper" as *;
@use "./partials/vars" as *;

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul {
  margin: 0;
  padding: 0;
}

h1 {
  font-size: clamp(2rem, 1vw, 2.2rem);
}
h2 {
  font-size: clamp(1.8rem, 1vw, 1.9rem);
}
h3 {
  font-size: clamp(1.6rem, 1vw, 1.7rem);
}
h4 {
  font-weight: normal;
  font-size: clamp(1.2rem, 1vw, 1.5rem);
}
h5 {
  font-weight: normal;
  font-size: clamp(1rem, 1vw, 1.2rem);
}
h6 {
  font-weight: normal;
  font-size: clamp(0.8rem, 1vw, 1rem);
}

p,
li {
  font-size: clamp(0.8rem, 1vw, 0.9rem);
}
span {
  font-size: clamp(0.8rem, 1vw, 0.7rem);
}

li {
  list-style: none;
}

a {
  margin: 0;
  padding: 0;
  color: var(--color--light-blue-4);
  font-size: clamp(1rem, 1vw, 1.2rem);
  text-decoration: none;
  cursor: pointer;

  @include useOnHover {
    color: var(--color--light-blue-2);
  }
  @include useOnClick {
    color: var(--color--light-blue-3);
  }
}
[data-theme="dark"] a {
  color: var(--color--orange-1);

  @include useOnHover {
    color: var(--color--orange-2);
  }
  @include useOnClick {
    color: var(--color--orange-3);
  }
}

button {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  border: none;
  outline: none;
  font-size: clamp(1rem, 1vw, 1.2rem);
  cursor: pointer;
  background: none;
}

img {
  display: block;
  margin: 0;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  list-style: none;
  text-decoration: none;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  overflow-x: hidden;
  color: var(--color--black);
  font-size: 16px;
  line-height: 1.5;
  user-select: none;
  background-color: var(--color--bg-light);

  &::-webkit-scrollbar {
    width: 7px;
  }

  &::-webkit-scrollbar-track {
    background: var(--color--blue-grey-2);
  }

  &::-webkit-scrollbar-thumb {
    border-radius: var(--border-radius--md);
    background: linear-gradient(to top, #fca26e 20%, #fcfbfc 50%, #68b8c1 100%);
  }
}
[data-theme="dark"] body {
  color: var(--color--light-blue-1);
  background-color: var(--color--bg-dark);
  &::-webkit-scrollbar-thumb {
    background: linear-gradient(to top, #68b8c1 30%, #fca26e 100%);
  }
}

#root {
  flex: 1;
}

footer {
  margin-top: auto;
}

main {
  overflow-x: hidden;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 2rem 1.2rem;

  @include useScreen("mobile-xl") {
    padding: 2.2rem 1.4rem;
  }
  @include useScreen("tablet-sm") {
    padding: 2.4rem 1.6rem;
  }
  @include useScreen("tablet-lg") {
    padding: 2.6rem 1.8rem;
  }
  @media screen and (min-width: 1200px) {
    width: 1200px;
  }
  @include useScreen("desktop-md") {
    padding: 3rem 2rem;
  }

  &__box-shadow {
    @include box-shadow-1(var(--color--blue-opacity));
  }
}
[data-theme="dark"] .container {
  &__box-shadow {
    @include box-shadow-1(var(--color--grey-opacity));
  }
}

.page-headings {
  @include flex(column, flex-start, flex-start);
  gap: 0.5rem;
  max-width: 100vw;
  padding-bottom: 2rem;

  &__align-center {
    align-items: center;
  }

  &__small-width {
    width: 90%;

    @include useScreen("mobile-xl") {
      width: 80%;
    }
    @include useScreen("tablet-sm") {
      width: 60%;
    }
    @media screen and (min-width: 850px) {
      width: 50%;
    }
  }

  &__medium-width {
    width: 100%;

    @include useScreen("mobile-xl") {
      width: 90%;
    }
    @include useScreen("tablet-sm") {
      width: 100%;
    }
  }

  h1,
  h2 {
    -webkit-text-fill-color: transparent;
    background-image: linear-gradient(
      to right,
      var(--color--light-blue-4),
      var(--color--light-blue-3),
      var(--color--light-blue-4) 50%,
      var(--color--light-blue-3),
      var(--color--light-blue-4)
    );
    background-clip: text;
  }

  h3,
  h4,
  h5,
  h6 {
    -webkit-text-fill-color: transparent;
    background-image: linear-gradient(
      to right,
      var(--color--orange-2),
      var(--color--orange-4),
      var(--color--orange-2) 50%,
      var(--color--orange-4),
      var(--color--orange-2)
    );
    background-clip: text;
  }
}
[data-theme="dark"] .page-headings {
  h1,
  h2 {
    background-image: linear-gradient(
      to right,
      var(--color--orange-2),
      var(--color--orange-4),
      var(--color--orange-2) 50%,
      var(--color--orange-4),
      var(--color--orange-2)
    );
  }

  h3,
  h4,
  h5,
  h6 {
    background-image: linear-gradient(
      to right,
      var(--color--light-blue-4),
      var(--color--light-blue-3),
      var(--color--light-blue-4) 50%,
      var(--color--light-blue-3),
      var(--color--light-blue-4)
    );
  }
}

.progress-bar {
  z-index: 9999;
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  width: 100%;
  height: 4px;
  background: linear-gradient(90deg, #fca26e 20%, #fcfbfc 50%, #68b8c1 100%);
  transform-origin: 0%;
}
[data-theme="dark"] .progress-bar {
  background: linear-gradient(90deg, #68b8c1 30%, #000 50%, #fca26e 100%);
}

.logo {
  &__img {
    object-fit: contain;
    border: 1px solid var(--color--light-brown);
    border-radius: var(--border-radius--rounded);
  }

  @include useOnHover {
    transform: scale(var(--scale));
  }

  &__footer {
    padding-bottom: 1rem;
  }
}
[data-theme="dark"] .logo {
  &__img {
    border: 1px solid var(--color--peach);
  }
}

.license {
  align-self: flex-end;
  color: var(--color--grey);
}
[data-theme="dark"] .license {
  color: var(--color--white-grey);
}

.text-red {
  color: var(--color--red-light);
}
[data-theme="dark"] .text-red {
  color: var(--color--red-dark);
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
/* ... */

